; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_pf_ioctl.c_pf_ifnet_hook.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_pf_ioctl.c_pf_ifnet_hook.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifnet = type { i32 }

@pf_perim_lock = common dso_local global i32 0, align 4
@pf_lock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pf_ifnet_hook(%struct.ifnet* %0, i32 %1) #0 {
  %3 = alloca %struct.ifnet*, align 8
  %4 = alloca i32, align 4
  store %struct.ifnet* %0, %struct.ifnet** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* @pf_perim_lock, align 4
  %6 = call i32 @lck_rw_lock_shared(i32 %5)
  %7 = load i32, i32* @pf_lock, align 4
  %8 = call i32 @lck_mtx_lock(i32 %7)
  %9 = load i32, i32* %4, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %2
  %12 = load %struct.ifnet*, %struct.ifnet** %3, align 8
  %13 = call i32 @pfi_attach_ifnet(%struct.ifnet* %12)
  br label %17

14:                                               ; preds = %2
  %15 = load %struct.ifnet*, %struct.ifnet** %3, align 8
  %16 = call i32 @pfi_detach_ifnet(%struct.ifnet* %15)
  br label %17

17:                                               ; preds = %14, %11
  %18 = load i32, i32* @pf_lock, align 4
  %19 = call i32 @lck_mtx_unlock(i32 %18)
  %20 = load i32, i32* @pf_perim_lock, align 4
  %21 = call i32 @lck_rw_done(i32 %20)
  ret void
}

declare dso_local i32 @lck_rw_lock_shared(i32) #1

declare dso_local i32 @lck_mtx_lock(i32) #1

declare dso_local i32 @pfi_attach_ifnet(%struct.ifnet*) #1

declare dso_local i32 @pfi_detach_ifnet(%struct.ifnet*) #1

declare dso_local i32 @lck_mtx_unlock(i32) #1

declare dso_local i32 @lck_rw_done(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
